--- a/_includes/author.html
+++ b/_includes/author.html
@@ -1,5 +1,5 @@
 <section class="author">
-    <!--<div class="authorimage box" style="background: url({{site.baseurl}}/assets/img/Taffy.jpg)"></div>-->
+    <!-- <div class="authorimage box" style="background: url({{site.baseurl}}/assets/logo.png)"></div> -->
   <div class="authorinfo box">
     <p>Author | Tony</p>
     <p class="bio">
